// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/ ルート / 退行検知） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="管理職昇進試験のインバスケット演習を、案件処理・優先順位付け・委任判断などのフレームワークから模擬試験までブラウザで体系的に学べる無料の日本語学習Webアプリです。" />
    <link rel="canonical" href="https://example.test/" />
    <meta property="og:title" content="インバスケット学習アプリ" />
    <meta property="og:description" content="管理職昇進試験のインバスケット演習を、案件処理・優先順位付け・委任判断などのフレームワークから模擬試験までブラウザで体系的に学べる無料の日本語学習Webアプリです。" />
    <meta property="og:url" content="https://example.test/" />
    <meta name="twitter:title" content="インバスケット学習アプリ" />
    <meta name="twitter:description" content="管理職昇進試験のインバスケット演習を、案件処理・優先順位付け・委任判断などのフレームワークから模擬試験までブラウザで体系的に学べる無料の日本語学習Webアプリです。" />
    <title>インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="home">

    <h1>インバスケット学習アプリ</h1>
    <p>架空の業務案件を読み、優先度と判断の理由を考えて練習する無料の学習サイトです。回答すると、優先度の考え方と対応例を自分の答案と比べられます。</p>
    <ul><li><a href="#practice-heading">1問解いてみる</a></li><li><a href="#home-intro-steps">学習の進め方を見る</a></li><li><a href="#home-about-heading">5件の案件を比較する実践解説</a></li></ul>
    <h2>こんな人に向いています</h2>
    <ul><li>昇進・昇格の選考や研修で、インバスケット形式の演習に取り組む予定がある人</li><li>複数の仕事を前に、何から手を付けるかの判断を練習したい人</li><li>判断の理由と部下への指示を、短い文章で書く練習をしたい人</li></ul>
    <h2 id="home-intro-steps">学習の進め方</h2>
    <ol><li>形式を知る インバスケットの形式と、担当者から管理職への考え方の切り替えを読みます。 <a href="/reference/chapter01">第1章 インバスケットとは何か</a></li><li>振り返りの観点を知る 答案を見直すための6つの観点を確認します。特定の試験の公式な採点基準ではありません。 <a href="/reference/chapter02">第2章 採点基準と振り返りの6観点</a></li><li>1問解く 下の問題演習で案件を読み、A・B・Cの優先度を選びます。学習スタイル「Deep」では判断の理由と対応も書けます。 <a href="#practice-heading">問題演習へ進む</a></li><li>解説と比べる 回答後の解説とモデル回答を読み、自分の答案に足りない確認や指示を探します。 <a href="/reference/chapter11">第11章 弱点分析と継続改善</a></li><li>パターンで整理する 迷った案件の型をパターン別解説で確かめ、回答の骨格と例文を読みます。 <a href="/patterns">パターン別解説（全20パターン）</a></li><li>通して解く 学習スタイルを「Exam」にすると、20問を90分で続けて解けます。時間配分と見直しを練習します。 <a href="/reference/chapter10">第10章 模擬試験の進め方</a></li></ol>
    <p>解説とモデル回答は、架空の条件に対する学習用の例です。特定の試験の公式な採点基準や正答ではありません。</p>
    <h2 id="practice-heading">問題演習</h2>


    <h2 id="home-about-heading">5件の案件をどう並べるか：優先順位と委任の実践例</h2>
    <p>更新日: <time datetime="2026-09-07">2026-09-07</time></p>
    <p>インバスケットの難しさは、一件ずつの対応を知っていても、複数の依頼が重なると同じ順序では動けないことです。ここでは、緊急度だけでなく、決裁権限と他の人の作業時間を考えて初動を組み立てます。以下は本サイトが作成した架空の学習ケースです。A・B・Cは教材内の分類であり、特定の試験の公式正答や合格基準ではありません。</p>

      <h3>演習の前提：午前9時、営業課長の机にある5件</h3>
      <p>あなたは営業課長です。10時から12時は会議があり、その間は担当者が業務を進めます。値引きは5%まで決裁できますが、それを超える場合は上長の承認が必要です。上長は9時45分から不在になります。営業担当、資料担当、品質保証部の窓口には連絡できます。次の5件が9時の時点で届いています。</p>
      <ul><li>顧客の不具合申告：納品した20台のうち2台が起動せず、顧客の生産開始が止まっています。原因と安全への影響は未確認です。</li><li>値引きの相談：既存顧客が8%の値引きを希望し、本日15時までの返答を求めています。担当営業は条件と採算を確認中です。</li><li>会議資料の依頼：明後日15時に売上見込み資料を提出します。部門ごとの数字がまだそろっていません。</li><li>休暇申請：来週金曜の休暇について、代替担当への業務共有は済み、支障はないと報告されています。</li><li>勉強会の案内：来月開催の任意参加の会です。参加可否の回答期限は今週末です。</li></ul>


      <h3>分類と着手順を分ける</h3>
      <p>不具合申告はAとして直ちに着手します。顧客の業務がすでに止まっており、安全面の確認も必要だからです。ただし、自分が原因調査まで終えてから他の案件に移るのではありません。品質保証部へ調査を依頼し、顧客との連絡を担当営業と分担します。</p><p>値引きと会議資料は、この前提ではBとして計画します。ただし、値引きの上申は9時45分までに先行させます。顧客への回答期限だけを見ると余裕があるようでも、決裁者に連絡できる時間が先に終わるためです。Bだから午後まで手を付けない、という扱いにはできません。</p><p>休暇申請と勉強会はCとして短く処理します。Cは無視する意味ではありません。休暇は確認済みの条件に沿って返答し、勉強会は回答する時刻を予定に入れます。チーム全員の参加取りまとめなど、依頼されていない作業を増やす必要もありません。</p>



      <h3>最初の15分で残す指示</h3>
      <p>9時00分：顧客へ申告を受領したと連絡し、症状、対象機器、安全への影響、停止している工程を確認します。品質保証部には確認できた情報を渡し、使用や出荷に関する暫定措置を相談します。9時30分に判明事項を集め、9時40分に顧客へ経過を報告する予定を関係者と合意します。復旧時刻はまだ約束しません。</p><p>9時05分：営業担当に、8%と5%の条件別の採算、顧客の希望理由、値引き以外の選択肢を9時20分までに整理するよう依頼します。上長の9時30分の確認時間を確保し、権限を超える8%の条件を顧客に確約しないよう伝えます。承認が得られなければ、権限内の提案か回答期限の相談を行います。</p><p>9時10分：資料担当に、足りない数値と依頼先を一覧化し、本日16時を回収状況の確認時刻に設定します。明日午前に草案を確認して修正時間を確保します。数字がそろわない場合も、見込み値と確定値を混ぜず、不足箇所を明記して報告するよう依頼します。</p><p>9時15分まで：休暇の承認を返し、当日の問い合わせ先を代替担当と自分にします。勉強会は本日16時30分に日程を確認して返答する予定に入れます。ここまでで、緊急案件の担当者、決裁の待ち時間、後日案件の中間確認がそれぞれ決まります。</p>



      <h3>答案の比較：何が不足しているか</h3>
      <p>不足のある例：「クレームを最優先で対応します。担当者に調査させ、値引きは上司に相談します。」優先する意思はありますが、安全確認、連絡窓口、報告時刻、値引きの決裁期限が分かりません。調査中に顧客から再度連絡が来たとき、誰が何を答えるかが未定です。</p><p>改善例：「顧客の業務停止を伴う不具合をAとして、私が一次連絡を行い、品質保証部へ安全と影響範囲の確認を依頼します。9時30分に判明事項を集め、未解決でも9時40分に顧客へ経過を報告します。8%の値引きは決裁範囲を超えるため、営業担当の条件別採算を9時20分に受け取り、上長が不在になる前の9時30分に上申します。」</p><p>改善のポイントは文章を長くすることではありません。誰が動くか、いつ結果を受け取るか、未確認の間に何を約束しないかが具体化しています。上記の時刻はこの演習の前提に合わせた計画例であり、実際の案件では相手の都合と調査見込みを確認して設定します。</p>



      <h3>条件が変わったら、判断も変える</h3>

      <ul><li>不具合が安全に関わると判明した場合：顧客への経過報告だけでは足りません。品質保証部の指示を受け、使用・出荷の扱いと他の納品先への影響確認を優先します。</li><li>値引き希望が3%に変わった場合：決裁上限内になりますが、自動承認ではありません。採算と契約条件を確認し、自分の権限内で採否を決めます。</li><li>会議資料が本日13時の提出に変わった場合：会議中に作業が止まらない体制と、最小限必要な数値の合意が先に必要です。Bのまま明日レビューする計画は使えません。</li></ul>


      <h3>自分の答案を見直す4つの問い</h3>
      <p>正答ラベルだけを比べず、次の問いに答案の具体的な一文で答えられるかを確認します。答えが見つからない箇所が、次の練習で補う点です。</p>
      <ul><li>問題文に書かれた事実と、自分が仮定した情報を分けたか。</li><li>他の人の調査・承認を待つ仕事を、期限から逆算して依頼したか。</li><li>任せる仕事の担当者、確認時刻、判断に迷う場合の連絡先を残したか。</li><li>調査が終わらないときの経過報告と、権限を超える約束をしない条件を決めたか。</li></ul>
      <ul><li><a href="/cases/case-001">顧客クレームを一件ずつ考える</a></li><li><a href="/cases/case-019">休暇申請の短い回答例</a></li><li><a href="/reference/chapter07">委任の目的・期限・報告を整理する</a></li><li><a href="/patterns/20">複合案件の考え方</a></li></ul>

    <p>InBusketは、優先順位の判断と理由の書き方を練習する無料の学習教材です。解説は架空の条件に対する対応例であり、特定の試験の合格や実務上の結果を保証するものではありません。</p>
    <ul><li><a href="/reference">解説リファレンス</a></li><li><a href="/patterns">パターン別解説</a></li><li><a href="/about">運営者情報・編集方針</a></li><li><a href="/terms">サービス利用規約</a></li></ul>

      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/cases/case-001 ルート / 第3段階先頭） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット代表ケース001（パターン1「顧客クレーム」・難易度上級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <link rel="canonical" href="https://example.test/cases/case-001/" />
    <meta property="og:title" content="ケース001：パターン1「顧客クレーム」（上級） | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット代表ケース001（パターン1「顧客クレーム」・難易度上級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <meta property="og:url" content="https://example.test/cases/case-001/" />
    <meta name="twitter:title" content="ケース001：パターン1「顧客クレーム」（上級） | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット代表ケース001（パターン1「顧客クレーム」・難易度上級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <title>ケース001：パターン1「顧客クレーム」（上級） | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="case-case-001">
        <h1>ケース001：主要顧客から大型クレームの電話</h1>
        <p>パターン1「顧客クレーム」／難易度：上級</p>
        <p>本サイトの学習用の分類・回答例です。実際の試験の公式正答や配点ではありません。回答例で補った期限や役割は、問題文の条件に合わせて見直してください。 <a href="/reference/chapter02">教材の評価観点と前提</a></p>
        <h2>ケース本文</h2>
        <p>主要顧客A社から「納品物に重大な不具合がある」と社長宛に電話があった。担当営業は外出中。社長は午後から海外出張で連絡が取りづらい。</p>
        <h2>教材の分類例と解説</h2>
        <p><strong>A優先（最重要・緊急）</strong></p>
        <p>重大な不具合の申告があり、安全や顧客業務への影響が未確認のため、この教材ではAを推奨します。代理窓口として発生状況を確認し、品質保証部の調査と顧客への一次連絡を並行して進めます。営業担当が外出中でも連絡できるかを確認し、窓口と記録を引き継ぎます。原因確定日や補償は見通しと権限を確認してから判断し、まずは次回の経過報告時刻を顧客と合意します。</p>
        <h2>案件文から読み取るべきこと</h2><p>問題文で確認できる事実は、主要顧客から重大な不具合の申告があり、担当営業が外出中で、社長は午後から連絡を取りづらくなることです。不具合の原因、安全への影響、対象数量、顧客の操業が止まっているかは未確認です。外出中というだけで営業担当が連絡不能とは限らず、社長宛の電話だけで担当者との関係悪化も断定できません。最初の連絡で発生状況と被害の拡大有無を聞き、品質保証部による確認と代理窓口の設置を並行して進めます。</p><h2>優先度判定の論拠</h2><p>この教材ではAを推奨します。重大な不具合の申告を放置すると、安全上の被害や顧客業務への影響が広がる可能性があり、影響範囲を早く把握する必要があるためです。社長宛であることや取引規模だけが理由ではありません。調査の完了を待たずに一次連絡を入れつつ、安全に関わるおそれがあれば使用・出荷の扱いを品質保証部と確認します。軽微な不具合で影響が限定的と分かった場合は、その時点で継続対応の優先度を見直せます。</p><h2>よくある誤答</h2><ul><li>担当営業の帰社まで待つ。代理窓口を決め、本人には連絡可能か確認すれば、顧客対応を止めずに引き継げます。</li><li>謝罪だけで一次対応を終える。安全への影響、使用状況、対象製品など、暫定措置を決めるための情報が残ります。</li><li>調査の見通しがないまま解決日や補償を約束する。権限と調査工程を確認し、まずは次回の経過報告時刻を合意します。</li></ul><h2>回答例文</h2><p>直ちに私が代理窓口として先方へ連絡し、ご不便へのお詫びと申告の受領を伝えます。発生状況、対象製品と数量、安全や操業への影響を確認し、品質保証部へ共有します。安全に関わるおそれがある場合は、使用・出荷に関する暫定措置を品質保証部と至急協議し、先方へ案内します。営業担当には連絡可能か確認し、窓口と記録を一本化します。本日中の一次調査の見込みを品質保証部に確認したうえで、先方と次回の経過報告時刻を合意します。原因確定や補償は未確認のまま約束せず、社長には出張前の連絡または秘書経由で判明事項と未確認事項を報告します。</p>
        <h2>モデル回答</h2><dl><dt>判断</dt><dd>Aランクとして本日中に一次対応を完了する。</dd><dt>理由</dt><dd>主要顧客の重大クレームであり、初動の遅れは信頼失墜と契約解除リスクに直結するため。</dd><dt>具体行動</dt><dd>代理窓口として発生状況と安全への影響を確認し、品質保証部へ調査と暫定措置を相談する。営業担当と窓口を一本化し、顧客と次回の経過報告時刻を合意する。社長へは判明事項と未確認事項を共有する。</dd></dl>
        <h2>一次対応の後にやること</h2><p>経過報告では判明事項、未確認事項、次の確認予定を分けて伝え、調査が終わらなくても約束した時刻に連絡します。対応後は同じ製品・ロットの他の納品先への影響を品質保証部と確認します。営業担当へ窓口を戻す際は顧客にも担当と連絡先を伝え、未完了の約束が引き継がれたことを確認します。</p>

        <h2>関連リンク</h2>
        <ul><li><a href="/patterns/1">パターン1「顧客クレーム」の詳細を見る</a></li><li><a href="/reference">解説リファレンス（章別の体系解説）</a></li></ul>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/cases/case-029 ルート / 第3段階中央代表） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット代表ケース029（パターン9「プロジェクト遅延・品質問題」・難易度上級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <link rel="canonical" href="https://example.test/cases/case-029/" />
    <meta property="og:title" content="ケース029：パターン9「プロジェクト遅延・品質問題」（上級） | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット代表ケース029（パターン9「プロジェクト遅延・品質問題」・難易度上級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <meta property="og:url" content="https://example.test/cases/case-029/" />
    <meta name="twitter:title" content="ケース029：パターン9「プロジェクト遅延・品質問題」（上級） | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット代表ケース029（パターン9「プロジェクト遅延・品質問題」・難易度上級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <title>ケース029：パターン9「プロジェクト遅延・品質問題」（上級） | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="case-case-029">
        <h1>ケース029：主要プロジェクトで品質問題が発覚</h1>
        <p>パターン9「プロジェクト遅延・品質問題」／難易度：上級</p>
        <p>本サイトの学習用の分類・回答例です。実際の試験の公式正答や配点ではありません。回答例で補った期限や役割は、問題文の条件に合わせて見直してください。 <a href="/reference/chapter02">教材の評価観点と前提</a></p>
        <h2>ケース本文</h2>
        <p>進行中の重要プロジェクトの結合テストで重大な品質欠陥が複数発見されたとPMから報告。リリース予定は2週間後で、顧客側にも進捗共有済み。リカバリー要員と期間の判断を求められている。</p>
        <h2>教材の分類例と解説</h2>
        <p><strong>A優先（最重要・緊急）</strong></p>
        <p>リリース直前の重大品質欠陥はパターン9 の代表例で、判断遅延がそのまま顧客信頼損失と機会損失に転じる A 優先案件です。PM から欠陥重大度・件数・原因仮説をヒアリングし、「増員／スコープ縮退／期限再調整」の 3 案をコスト・品質・顧客影響で比較整理します。顧客へは隠蔽せず事実と回復計画を早期に提示し、上長と方針を握ったうえで本日中に社内・社外の方針を確定させるのが定石です。パターン9「プロジェクト遅延・品質問題」の型は解説リファレンス第8章「案件パターン別攻略」で体系的に確認できます。</p>
        <h2>案件文から読み取るべきこと</h2><p>結合テストで重大な品質欠陥が複数発見され、リリースは二週間後、顧客側にも進捗を共有済みという状況です。二週間という残期間は、選択肢がまだ複数残っている貴重な状態を意味します。この時点なら増員も、機能を絞った段階リリースも、期限の再調整も検討可能です。しかし一週間を切ると実質的にスコープ縮退しか残りません。つまり、判断を先送りするほど打てる手が減る構造です。加えて、顧客に進捗を共有済みという条件は、こちらから状況を伝える前に相手が気づくリスクを含んでいます。</p><h2>優先度判定の論拠</h2><p>A優先の根拠は、意思決定の遅れが選択肢の消滅に直結する点です。技術的な復旧作業そのものは現場が進めますが、方針決定は管理職にしかできず、しかも決定が遅れるほど実行可能な案が減ります。もう一つの理由は顧客への説明タイミングで、悪い情報は早く伝えるほど信頼の毀損が小さくなります。隠していた期間の長さが、後になって最も強く問われる要素になるため、社内方針の確定と顧客説明の準備を同日中に進める必要があります。</p><h2>よくある誤答</h2><ul><li>原因究明の完了を待ってから方針を決める。影響範囲の暫定評価があれば方針判断は可能で、待機は選択肢を減らします。</li><li>増員だけを対策として挙げる。終盤の要員追加は立ち上がりに時間を要し、かえって遅延することがあります。</li><li>顧客への報告を社内方針の確定後まで完全に伏せる。遅延の事実より、隠していた事実のほうが強い不信を招きます。</li></ul><h2>回答例文</h2><p>本日中にPMから、欠陥の重大度別件数、影響を受ける機能範囲、原因の仮説を三十分で報告させます。それをもとに、増員によるリカバリー、機能を絞った段階リリース、期限の再調整という三案を、追加コスト・品質リスク・顧客影響の三軸で比較した資料を明日午前までに作成させます。私は本日中に上長へ状況を一報し、顧客への説明方針について合意を得ます。顧客に対しては、事実と現時点での回復見通し、次回報告のタイミングを明日中に共有する段取りとし、隠蔽と受け取られる余地を残しません。テスト工程の見直しは再発防止課題として起票します。</p>
        <h2>モデル回答</h2><dl><dt>判断</dt><dd>Aランクとして本日中にリカバリー方針と顧客報告方針を確定する。</dd><dt>理由</dt><dd>リリース2週間前の重大品質欠陥は顧客信頼に直結し、判断遅延は被害を拡大させるため。</dd><dt>具体行動</dt><dd>PMから欠陥の重大度・件数・原因仮説をヒアリングし、増員／スコープ縮退／期限再調整の3案を比較整理する。本日中に方針を上長と握り、顧客に対しては隠蔽せず事実と回復計画を早期に共有する段取りを準備する。</dd></dl>
        <h2>一次対応の後にやること</h2><p>リリース後は、欠陥がテスト工程のどの段階で検出されるべきだったかを検証し、レビューとテストの配置を見直します。顧客に対しては、再発防止策を正式に説明する場を設け、信頼回復のプロセスを可視化します。今回の三案比較のフォーマットは、他プロジェクトの緊急判断にも再利用できる形で部内に共有します。</p>

        <h2>関連リンク</h2>
        <ul><li><a href="/patterns/9">パターン9「プロジェクト遅延・品質問題」の詳細を見る</a></li><li><a href="/reference">解説リファレンス（章別の体系解説）</a></li></ul>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/cases/case-053 ルート / 第3段階末尾） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット代表ケース053（パターン2「取引先からの要求（値引き・仕様変更等）」・難易度初級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <link rel="canonical" href="https://example.test/cases/case-053/" />
    <meta property="og:title" content="ケース053：パターン2「取引先からの要求（値引き・仕様変更等）」（初級） | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット代表ケース053（パターン2「取引先からの要求（値引き・仕様変更等）」・難易度初級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <meta property="og:url" content="https://example.test/cases/case-053/" />
    <meta name="twitter:title" content="ケース053：パターン2「取引先からの要求（値引き・仕様変更等）」（初級） | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット代表ケース053（パターン2「取引先からの要求（値引き・仕様変更等）」・難易度初級）の本文と解説、模範回答の骨格を確認できる単独URLページです。" />
    <title>ケース053：パターン2「取引先からの要求（値引き・仕様変更等）」（初級） | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="case-case-053">
        <h1>ケース053：取引先からの契約更新書類の軽微修正依頼</h1>
        <p>パターン2「取引先からの要求（値引き・仕様変更等）」／難易度：初級</p>
        <p>本サイトの学習用の分類・回答例です。実際の試験の公式正答や配点ではありません。回答例で補った期限や役割は、問題文の条件に合わせて見直してください。 <a href="/reference/chapter02">教材の評価観点と前提</a></p>
        <h2>ケース本文</h2>
        <p>取引先K社から契約更新書類の表記ゆれ修正依頼。内容変更はなく、締結期限は2週間後。法務確認済みテンプレート内で対応可能。</p>
        <h2>教材の分類例と解説</h2>
        <p><strong>C優先（低優先度）</strong></p>
        <p>取引先からの契約軽微修正はパターン2の典型で、重要業務の手を止めて深く検討するほどの緊急性はありません。法務確認済みテンプレート内の表記ゆれ修正という性質からC優先で扱い、定型手順に沿って修正箇所を反映し担当者に最終確認を依頼するのが定石です。期限1週間前を目安に返送し、送付完了を取引先へ簡潔に連絡しておくと、相手側の社内決裁にも余裕が生まれ取引信頼の維持に繋がります。パターン2「取引先要求」の型は解説リファレンス第8章「案件パターン別攻略」で体系的に確認できます。</p>
        <h2>案件文から読み取るべきこと</h2><p>取引先からの契約更新書類の表記ゆれ修正依頼で、内容変更はなく、締結期限は二週間後、法務確認済みテンプレート内で対応可能という条件です。判断に必要な情報はすべて揃っており、リスクも限定的です。この案件で試されるのは、軽微な案件を軽微と判定できるかという点と、期限が二週間先であることに安心して忘れないかという段取りの確実性です。契約事務は相手側の社内決裁にも時間を要するため、期限ぎりぎりの返送は先方に迷惑をかけます。</p><h2>優先度判定の論拠</h2><p>C優先とする根拠は、内容変更を伴わない表記の修正であり、法務確認済みのテンプレート内で処理できる点です。判断の余地がなく、重要業務を止めてまで対応する緊急性もありません。ただし、締結期限という明確な締切があるため、放置は許されません。相手側の決裁期間を考慮し、期限の一週間前を目安に返送する段取りを組むのが実務的です。優先度が低いことと締切がないことは別である、という原則が適用されます。</p><h2>よくある誤答</h2><ul><li>軽微な修正であっても法務へ改めて全文確認を依頼する。確認済みテンプレート内であれば不要な工数です。</li><li>期限直前まで放置する。相手側の社内決裁の時間を奪い、取引関係に不要な緊張を生みます。</li><li>修正内容を担当者に最終確認させずに返送する。表記ゆれの修正でも、確認を省くと別の誤りが混入します。</li></ul><h2>回答例文</h2><p>指摘のあった表記を法務確認済みテンプレートに沿って修正し、担当者に最終確認を依頼します。期限の一週間前を目安に返送し、送付完了を取引先へ簡潔に連絡します。修正箇所は履歴として残し、次回更新時に同じ指摘が出ないようテンプレート側にも反映します。</p>
        <h2>モデル回答</h2><dl><dt>判断</dt><dd>Cランクとして定型手順で期限内に返送する。</dd><dt>理由</dt><dd>法務確認済みの軽微修正で、重要業務を止めるほどの緊急性がないため。</dd><dt>具体行動</dt><dd>修正箇所を法務テンプレートに反映し、担当者に最終確認を依頼する。期限1週間前に返送し、送付完了を取引先へ簡潔に連絡する。</dd></dl>
        <h2>一次対応の後にやること</h2><p>同種の表記ゆれが他の契約書でも発生していないかを担当者に点検させ、テンプレートの記載を統一します。契約更新は定期的に発生するため、更新時期の一覧を作成し、期限の一か月前に着手する運用に変えることで、期限管理の負荷そのものを下げます。</p>

        <h2>関連リンク</h2>
        <ul><li><a href="/patterns/2">パターン2「取引先からの要求（値引き・仕様変更等）」の詳細を見る</a></li><li><a href="/reference">解説リファレンス（章別の体系解説）</a></li></ul>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/patterns/1 ルート / 第4段階先頭代表） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット案件パターン1「顧客クレーム」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <link rel="canonical" href="https://example.test/patterns/1/" />
    <meta property="og:title" content="パターン1：顧客クレーム | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット案件パターン1「顧客クレーム」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <meta property="og:url" content="https://example.test/patterns/1/" />
    <meta name="twitter:title" content="パターン1：顧客クレーム | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット案件パターン1「顧客クレーム」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <title>パターン1：顧客クレーム | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="pattern-1">
        <h1>パターン1：顧客クレーム</h1>
        <p>対外対応パターン</p>
        <p>本サイトの学習用の分類・回答例です。実際の試験の公式正答や配点ではありません。回答例で補った期限や役割は、問題文の条件に合わせて見直してください。 <a href="/reference/chapter02">教材の評価観点と前提</a></p>
        <h2>優先度の目安</h2><p>A優先（最重要・緊急）</p>
<h2>特徴・優先度判定理由</h2><p>緊急度・重要度ともに高い。最優先案件。初動の遅れは信頼失墜に直結する。</p>
<h2>案件の読み解き</h2><p>顧客クレームでは、顧客が申告している事象、実際に起きている影響、顧客が求める対応を分けて読みます。「重大な不具合」とあっても、安全への影響、対象数量、原因まで判明しているとは限りません。担当者が不在であれば代理の窓口を決め、調査を担う品質保証部と連絡対応を分担します。担当者が外出中でも連絡できることはあるため、不在を理由に連絡経路を最初から除外しません。原因調査に時間がかかるときは、確認済みの事実と次回の報告予定を先に伝えることができます。</p>
<h2>なぜこの優先度になるのか</h2><p>安全への影響や顧客の業務停止を伴う不具合は、被害が広がるおそれがあるためAとして初動を優先するのが本教材の考え方です。クレームという名前だけで一律に決めるのではなく、被害の程度、対象範囲、回答期限を確認します。影響が軽微で、代替策があり、次の連絡も合意済みなら、その後の調査は他の業務と並行して計画できます。謝罪と状況把握は調査の完了を待つ必要がありませんが、復旧時刻や補償は見通しと権限を確認してから約束します。優先順位は新しい事実が分かった段階で見直します。</p>
<h2>回答の骨格</h2><ol><li>顧客への初動対応（謝罪・受領連絡）を指示</li><li>事実関係の調査を指示（担当者・期限）</li><li>再発防止策の検討を指示</li><li>必要に応じて上司・関係部署に報告</li><li>顧客への正式回答の期限を設定</li></ol>
<h2>よくある失敗</h2><ul><li>調査結果が判明するまで顧客への連絡を保留してしまう。事実確認と一次連絡は並行して走らせるべきで、沈黙は最も高くつく選択です。</li><li>担当営業が戻るのを待つ。案件文に不在と書かれている時点で「自分が代理で動けるか」が要点で、待っている間は顧客への対応が止まります。</li><li>謝罪だけで終わり、回答期限を握らない。期限のない謝罪は相手の不安を下げず、再督促を招いて対応工数を倍増させます。</li><li>社内の責任追及から始めてしまう。誰のミスかの確定は事後の再発防止フェーズの仕事で、初動フェーズでは被害の拡大防止が唯一の目的です。</li></ul>
<h2>回答例文</h2><p>私が代理窓口として顧客へ連絡し、申告の受領とご不便へのお詫びを伝えます。発生状況、安全への影響、対象製品と数量を確認し、品質保証部へ共有します。使用・出荷の暫定措置は品質保証部と協議し、営業担当には顧客連絡と記録の引き継ぎを依頼します。一次調査の見込みを確認し、顧客と次回の経過報告時刻を合意します。未解決でもその時刻に連絡し、原因や補償は未確認のまま確約しません。</p>
<h2>答案を振り返る観点</h2><p>自分の答案に、顧客が今困っていることを確認する一文と、調査を進める担当者への指示が両方あるかを確かめます。謝罪だけ、調査だけに偏っていないかが比較点です。次に、調査が予定どおり終わらない場合も連絡できるよう、窓口と経過報告を決めたかを見ます。日時を加えただけでは実行可能とは限らないため、調査見込みを確認し、相手と合意する手順も必要です。</p>
<h2>キーフレーズ例</h2><ul><li>「まず本日中にお詫びと経過報告の連絡を行い…」</li><li>「事実確認の上、○日までに正式回答する方針で…」</li></ul>
<h2>このパターンの代表ケース</h2><ul><li><a href="/cases/case-001">ケース001：主要顧客から大型クレームの電話（上級）</a></li></ul>
<h2>関連リンク</h2><ul><li><a href="/patterns">パターン別解説（全20パターン）</a></li><li><a href="/reference/chapter08">解説リファレンス：案件パターン別攻略（第8章）</a></li></ul>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/patterns/10 ルート / 第4段階中央代表） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット案件パターン10「予算承認・経費申請」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <link rel="canonical" href="https://example.test/patterns/10/" />
    <meta property="og:title" content="パターン10：予算承認・経費申請 | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット案件パターン10「予算承認・経費申請」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <meta property="og:url" content="https://example.test/patterns/10/" />
    <meta name="twitter:title" content="パターン10：予算承認・経費申請 | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット案件パターン10「予算承認・経費申請」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <title>パターン10：予算承認・経費申請 | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="pattern-10">
        <h1>パターン10：予算承認・経費申請</h1>
        <p>業務・プロジェクトパターン</p>
        <p>本サイトの学習用の分類・回答例です。実際の試験の公式正答や配点ではありません。回答例で補った期限や役割は、問題文の条件に合わせて見直してください。 <a href="/reference/chapter02">教材の評価観点と前提</a></p>
        <h2>優先度の目安</h2><p>状況依存</p>
<h2>特徴・優先度判定理由</h2><p>金額と権限の範囲を確認する。費用対効果と予算範囲が判断軸。</p>
<h2>案件の読み解き</h2><p>予算承認や経費申請は、金額と権限という二つの数字を照合するだけの単純な案件に見えますが、「自分の決裁枠のすぐ上」や「単年度では枠内だが複数年では超過」といった境界線上の金額に注意が必要です。ここで大切なのは、規程を確認するという当たり前の行動を、時間に追われた状況でも省略しないかという規律です。また、費用対効果の説明が案件文に不足している場合、それを補わせてから判断するのか、不足のまま却下するのかという判断も含まれます。多くの場合、追加情報を求めたうえで条件付き承認とするのが最も現実的な着地点になります。</p>
<h2>なぜこの優先度になるのか</h2><p>状況依存となるのは、金額規模と期限の組み合わせで緊急度が変動するためです。期末の予算執行期限が迫っている、あるいは発注が遅れると事業計画に影響するといった条件があれば優先度は上がり、単なる備品の補充であればC優先で足ります。判断の軸は三つあり、決裁権限の範囲内か、費用対効果が説明可能か、そして予算枠の残高に収まるかです。この三つのうち一つでも欠ける場合は、その欠けた要素を補う指示を出すのが正解で、情報が揃わないまま承認することも、情報不足を理由に単に却下することも避けます。</p>
<h2>回答の骨格</h2><ol><li>費用対効果を確認</li><li>予算の範囲内か確認</li><li>承認/条件付き承認/上申のいずれかを判断</li><li>理由を明記</li></ol>
<h2>よくある失敗</h2><ul><li>規程や決裁権限を確認せずに承認する。事後に権限外と判明した場合、承認そのものが無効となり組織的な混乱を招きます。</li><li>費用対効果の説明を求めずに判断する。判断根拠が記録に残らず、後日の監査や引き継ぎで説明できなくなります。</li><li>却下する場合に理由と代替案を示さない。理由なき却下は現場の提案意欲を削ぎ、次の改善提案が上がってこなくなります。</li><li>自分ですべて調べようとする。金額の妥当性や相場の確認は担当者に依頼すべき作業で、管理職の時間の使い方として不適切です。</li></ul>
<h2>回答例文</h2><p>申請内容を確認したところ、金額は私の決裁枠内ですが、費用対効果の記載が不足しています。申請者に対し、導入による削減効果と回収期間を明日中に補足するよう指示します。補足内容が妥当であれば承認し、予算枠の残高への影響を経理へ共有します。仮に金額が枠を超える場合は、削減効果の試算を添えて本部長へ上申し、私としては段階的導入による初期費用の圧縮を推奨案として提示します。いずれの場合も、判断理由を申請者へ明示的にフィードバックし、次回以降の申請品質が上がるようにします。</p>
<h2>答案を振り返る観点</h2><p>申請金額と決裁枠だけでなく、予算残高、継続費用、申請目的も判断の前提に入っているかを確認します。情報が足りない場合は、何を誰にいつまでに補足してもらうかを具体化します。不要な支出を却下する判断もあり得るため、追加情報を求めれば必ず承認するという書き方にはしません。採否とその理由を申請者に返し、次回申請で必要になる材料を伝えるところまで残せているか見直します。</p>
<h2>このパターンの代表ケース</h2><ul><li><a href="/cases/case-035">ケース035：名刺発注の在庫確認（初級）</a></li></ul>
<h2>関連リンク</h2><ul><li><a href="/patterns">パターン別解説（全20パターン）</a></li><li><a href="/reference/chapter08">解説リファレンス：案件パターン別攻略（第8章）</a></li></ul>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/patterns/20 ルート / 第4段階末尾） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット案件パターン20「複合案件（複数パターンの組み合わせ）」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <link rel="canonical" href="https://example.test/patterns/20/" />
    <meta property="og:title" content="パターン20：複合案件（複数パターンの組み合わせ） | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット案件パターン20「複合案件（複数パターンの組み合わせ）」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <meta property="og:url" content="https://example.test/patterns/20/" />
    <meta name="twitter:title" content="パターン20：複合案件（複数パターンの組み合わせ） | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット案件パターン20「複合案件（複数パターンの組み合わせ）」の特徴・優先度の目安・回答の骨格を確認できる詳細ページです。" />
    <title>パターン20：複合案件（複数パターンの組み合わせ） | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="pattern-20">
        <h1>パターン20：複合案件（複数パターンの組み合わせ）</h1>
        <p>その他のパターン</p>
        <p>本サイトの学習用の分類・回答例です。実際の試験の公式正答や配点ではありません。回答例で補った期限や役割は、問題文の条件に合わせて見直してください。 <a href="/reference/chapter02">教材の評価観点と前提</a></p>
        <h2>優先度の目安</h2><p>A優先（最重要・緊急）</p>
<h2>特徴・優先度判定理由</h2><p>高難度。A案件になりやすい。案件を要素に分解し、優先順位の高い要素から対応する。</p>
<h2>案件の読み解き</h2><p>複合案件は、一つの案件文に複数のパターンが折り重なった難度の高い案件です。本教材の例では、事故の発生、報道機関からの取材、顧客からの問い合わせ、法令上の報告義務が同時に走り、しかも情報が錯綜しているという状況が設定されます。ここで問われるのは、個々の対応の巧拙ではなく、絡み合った事象を要素へ分解し、着手順序を決める力です。すべてに同時に手をつけようとすると、どれも中途半端になります。要素分解と順序付け、そして並行して走らせる部分の切り分けという三段階の思考が必要になります。</p>
<h2>なぜこの優先度になるのか</h2><p>A優先となるのは、含まれる要素の中に必ず最優先項目（人命・安全、法令、重大な信用毀損）が含まれるためです。ただし、案件全体をA優先とみなすだけでは不十分で、分解した要素ごとに優先度を再設定する必要があります。人命と安全が最上位、次に事実確認、そして情報発信の一元化、その後に個別の顧客対応と続くのが標準的な順序です。この順序が守られないと、たとえば事実が固まる前に対外発信を行い、後から訂正して信用をさらに損なうといった典型的な失敗が発生します。順序そのものが対策の中身になる、という点が複合案件の特徴です。</p>
<h2>回答の骨格</h2><ol><li>案件を要素に分解する</li><li>優先順位の高い要素から対応する</li><li>関連する他の案件と紐づけて対応する</li></ol>
<h2>よくある失敗</h2><ul><li>案件を分解せずに一括で対応しようとする。要素ごとに担当も期限も異なるため、一括対応は必ず抜けを生みます。</li><li>事実確認前に対外発信を行う。訂正が必要になった時点で、当初の被害よりも大きな信用毀損が発生します。</li><li>情報発信の窓口を一本化しない。複数の窓口から異なる説明が出ると、隠蔽や混乱の印象を決定的にします。</li><li>現地や現場の判断に任せきりにする。全体最適の視点は本社側にしかなく、統括の放棄は事態を長期化させます。</li></ul>
<h2>回答例文</h2><p>本件を、人命・安全、事実確認、対外広報、顧客対応、法令対応の五つの要素に分解します。第一に、負傷者の有無と現場の安全確保を現地責任者に確認させ、三十分以内の報告を求めます。第二に、本社と現地の双方で事実確認チームを編成し、確定した事実のみを集約する単一の記録を作らせます。第三に、報道機関への対応窓口を広報部門に一本化し、確認済みの事実に限って回答する方針を本日中に文書化します。第四に、顧客からの問い合わせには統一回答文を用意し、判明していない点は判明していないと明示します。第五に、法務と連携して報告義務の有無と期限を確認します。以上を統括する対策本部を本日中に立ち上げ、経営層へ即時報告します。</p>
<h2>答案を振り返る観点</h2><p>要素を列挙した後、それぞれの担当と期限、他の作業を待つ必要がある箇所まで示したかを確認します。安全確保は先行させつつ、連絡や記録の集約は別の担当が並行できます。すべての事実が確定するまで沈黙するのではなく、確認済みの内容と未確認事項を分けて伝えます。現場で判断できる範囲を残し、統括側への報告条件を決めることで、情報の一元化が現場の動きを止めていないかも見直します。</p>
<h2>このパターンの代表ケース</h2><ul><li><a href="/cases/case-031">ケース031：海外子会社の品質問題と現地メディア対応の同時発生（上級）</a></li></ul>
<h2>関連リンク</h2><ul><li><a href="/patterns">パターン別解説（全20パターン）</a></li><li><a href="/reference/chapter08">解説リファレンス：案件パターン別攻略（第8章）</a></li></ul>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/reference/chapter01 ルート / 退行検知） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット学習の「インバスケットとは何か」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <link rel="canonical" href="https://example.test/reference/chapter01/" />
    <meta property="og:title" content="解説リファレンス：インバスケットとは何か | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット学習の「インバスケットとは何か」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <meta property="og:url" content="https://example.test/reference/chapter01/" />
    <meta name="twitter:title" content="解説リファレンス：インバスケットとは何か | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット学習の「インバスケットとは何か」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <title>解説リファレンス：インバスケットとは何か | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="reference-chapter01">
        <p>解説リファレンス｜入門</p>
        <h1>インバスケットとは何か</h1>
        <p>インバスケットの形式と、担当者から管理職への思考の切り替えを整理する。</p>
        <p>第 1 章 / 全 12 章</p>
        <h2>学習ゴール</h2><ul><li>インバスケット演習の基本設定を説明できる</li><li>担当者としての癖が答案でつまずきになる理由を把握できる</li><li>プレイヤー思考とマネージャー思考の違いを理解できる</li></ul>
<h2>インバスケットの形式</h2><p>正解を一つ当てるより、判断と行動の組み立てを示す形式である。</p><p>インバスケットは、架空の管理職の立場で、たまった未処理案件を制限時間内に処理する演習形式である。着任初日などの設定が使われる。</p><p>本教材では、結論（承認したか）だけでなく、なぜそう判断し、誰にどう指示したかまで答案に書く練習をする。</p><table><thead><tr><th scope="col">項目</th><th scope="col">設定の例（実施者により異なる）</th></tr></thead><tbody><tr><td>制限時間</td><td>60〜90分</td></tr><tr><td>案件数</td><td>15〜25件</td></tr><tr><td>役職</td><td>課長・マネージャー相当</td></tr><tr><td>状況</td><td>着任初日、前任者不在、すぐに出張へ出る設定</td></tr></tbody></table>
<h2>つまずきやすい3つの癖</h2><ul><li>唯一の正解を探しがちで、判断の妥当性より解を当てにいってしまう。</li><li>自分で解決しようとして、委任や関係者連携を弱く書いてしまう。</li><li>完璧に処理しようとして、全案件に反応を書く前に時間切れになる。</li></ul><h3>重要メモ</h3><p>白紙の案件には判断の手がかりが残らない。完璧さより、全案件に判断・理由・指示を短くでも残すことを優先する。</p>
<h2>プレイヤー思考からマネージャー思考へ</h2><table><thead><tr><th scope="col">プレイヤー思考</th><th scope="col">マネージャー思考</th></tr></thead><tbody><tr><td>自分で解決する</td><td>部下に任せる・関係部署と連携する</td></tr><tr><td>技術的に正しい答えを出す</td><td>組織として最適な判断をする</td></tr><tr><td>目の前のタスクに集中する</td><td>全体を俯瞰して優先順位をつける</td></tr><tr><td>完璧に仕上げてから提出する</td><td>完璧でなくても全案件に対応する</td></tr><tr><td>詳細な手順を考える</td><td>方針と判断理由を示す</td></tr></tbody></table><p>論理的思考力や問題分析力そのものは武器になる。使いどころを「自分が解く」から「組織で処理する」に切り替えることが鍵になる。</p>
<h2>関連パターン</h2><ul><li><a href="/patterns/1">顧客クレーム（パターン1）</a>：A優先度・並行対応の代表例で「組織で処理する」発想を実体験する</li></ul>
        <ul><li>← 前の章 （最初の章です）</li><li><a href="/reference">↑ 章一覧へ戻る</a></li><li><a href="/reference/chapter02">次の章 → 採点基準と振り返りの6観点</a></li></ul>
        <nav id="reference-chapter-nav" aria-label="章スキップ"><ul><li><a href="/reference/chapter01">第1章 インバスケットとは何か</a></li><li><a href="/reference/chapter02">第2章 採点基準と振り返りの6観点</a></li><li><a href="/reference/chapter03">第3章 マネージャー思考への切替</a></li><li><a href="/reference/chapter04">第4章 時間配分とタイムマネジメント</a></li><li><a href="/reference/chapter05">第5章 優先順位づけの技術</a></li><li><a href="/reference/chapter06">第6章 意思決定フレームワーク</a></li><li><a href="/reference/chapter07">第7章 委任と組織活用の技術</a></li><li><a href="/reference/chapter08">第8章 案件パターン別攻略</a></li><li><a href="/reference/chapter09">第9章 答案の書き方と文章技術</a></li><li><a href="/reference/chapter10">第10章 模擬試験の進め方</a></li><li><a href="/reference/chapter11">第11章 弱点分析と継続改善</a></li><li><a href="/reference/chapter12">第12章 本番当日の戦略</a></li></ul></nav>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/reference/chapter06 ルート / 第2段階代表） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット学習の「意思決定フレームワーク」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <link rel="canonical" href="https://example.test/reference/chapter06/" />
    <meta property="og:title" content="解説リファレンス：意思決定フレームワーク | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット学習の「意思決定フレームワーク」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <meta property="og:url" content="https://example.test/reference/chapter06/" />
    <meta name="twitter:title" content="解説リファレンス：意思決定フレームワーク | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット学習の「意思決定フレームワーク」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <title>解説リファレンス：意思決定フレームワーク | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="reference-chapter06">
        <p>解説リファレンス｜基礎</p>
        <h1>意思決定フレームワーク</h1>
        <p>判断・理由・指示の3点セットを軸に、情報整理から行動指示までを高速に組み立てる枠組みを整理する。</p>
        <p>第 6 章 / 全 12 章</p>
        <h2>学習ゴール</h2><ul><li>判断・理由・指示の3点セットで答案を書ける</li><li>情報整理→意思決定→行動指示のフローを高速に回せる</li><li>不確実性が高い案件で仮判断と再評価を使い分けられる</li></ul>
<h2>3点セットで書く</h2><p>答案を「判断＋理由＋指示」の3要素で組み立てると、読み手が次の行動を確認しやすい。</p><table><thead><tr><th scope="col">要素</th><th scope="col">書くこと</th><th scope="col">NG例</th></tr></thead><tbody><tr><td>判断</td><td>優先度ランクと結論を明示</td><td>「検討します」で終える</td></tr><tr><td>理由</td><td>重要度・緊急度・影響範囲の根拠</td><td>感情論や個人意見だけ</td></tr><tr><td>指示</td><td>担当者・期限・報告方法</td><td>誰に何時までかが不明</td></tr></tbody></table><h3>型を持つ価値</h3><p>型に当てはめて書くことで、案件ごとの考慮抜けを防ぎ、書く速度と内容の安定を両立できる。</p>
<h2>情報整理→意思決定→行動指示</h2><ul><li>情報整理: 関係者・期限・既知情報・不足情報を30秒で書き出す</li><li>意思決定: 影響範囲と回復可能性で優先度を決める</li><li>行動指示: 誰が、いつまでに、何を、どう報告するかを書く</li></ul><p>不確実性が高い案件は、確定的な判断ではなく「現時点では○○の方針で進める。N日後に再評価する」と仮判断＋再評価条件を示す。何も決めない答案より、次に確認することと判断の時期が伝わる。</p>
<h2>参照導線</h2><ul><li><a href="/reference/chapter02">採点基準と振り返りの6観点</a>：振り返りの6観点と3点セットの対応を確認する</li><li><a href="/patterns/20">複合案件（パターン20）</a>：判断・理由・指示の3点セットを複合案件で適用する関連パターン</li></ul>
        <ul><li><a href="/reference/chapter05">← 前の章 優先順位づけの技術</a></li><li><a href="/reference">↑ 章一覧へ戻る</a></li><li><a href="/reference/chapter07">次の章 → 委任と組織活用の技術</a></li></ul>
        <nav id="reference-chapter-nav" aria-label="章スキップ"><ul><li><a href="/reference/chapter01">第1章 インバスケットとは何か</a></li><li><a href="/reference/chapter02">第2章 採点基準と振り返りの6観点</a></li><li><a href="/reference/chapter03">第3章 マネージャー思考への切替</a></li><li><a href="/reference/chapter04">第4章 時間配分とタイムマネジメント</a></li><li><a href="/reference/chapter05">第5章 優先順位づけの技術</a></li><li><a href="/reference/chapter06">第6章 意思決定フレームワーク</a></li><li><a href="/reference/chapter07">第7章 委任と組織活用の技術</a></li><li><a href="/reference/chapter08">第8章 案件パターン別攻略</a></li><li><a href="/reference/chapter09">第9章 答案の書き方と文章技術</a></li><li><a href="/reference/chapter10">第10章 模擬試験の進め方</a></li><li><a href="/reference/chapter11">第11章 弱点分析と継続改善</a></li><li><a href="/reference/chapter12">第12章 本番当日の戦略</a></li></ul></nav>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;

exports[`PBI-086 transformTemplateForRoute（view-source: 静的可視） > 生成 HTML 全体スナップショット（/reference/chapter12 ルート / 第2段階末尾） 1`] = `
"<!doctype html>
<html lang="ja">
  <head>
    <meta charset="UTF-8" />
    <meta name="description" content="インバスケット学習の「本番当日の戦略」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <link rel="canonical" href="https://example.test/reference/chapter12/" />
    <meta property="og:title" content="解説リファレンス：本番当日の戦略 | インバスケット学習アプリ" />
    <meta property="og:description" content="インバスケット学習の「本番当日の戦略」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <meta property="og:url" content="https://example.test/reference/chapter12/" />
    <meta name="twitter:title" content="解説リファレンス：本番当日の戦略 | インバスケット学習アプリ" />
    <meta name="twitter:description" content="インバスケット学習の「本番当日の戦略」を中心に、要点とフレームワークを章別に確認できる解説リファレンスページです。" />
    <title>解説リファレンス：本番当日の戦略 | インバスケット学習アプリ</title>
    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-XXXX" crossorigin="anonymous"></script>
  </head>
  <body>
    <div id="root"><div data-prerender="reference-chapter12">
        <p>解説リファレンス｜本番準備</p>
        <h1>本番当日の戦略</h1>
        <p>本番当日の持ち物・心構え・直前準備・終了直前の見直しまで、力を出し切るための行動計画を整理する。</p>
        <p>第 12 章 / 全 12 章</p>
        <h2>学習ゴール</h2><ul><li>本番前日と当日朝の準備を再現可能にする</li><li>緊張下でも時間配分を崩さずに進められる</li><li>残り時間ごとの行動を事前に決めておける</li></ul>
<h2>前日と当日朝の準備</h2><ul><li>前日: 持ち物（受験票・筆記用具・腕時計）と会場経路を確認する</li><li>前日: 直前に新しい教材は開かず、これまでの自分の型を1度なぞる</li><li>当日朝: 軽めの食事をとり、開始30分前には会場入りする</li><li>当日朝: 序盤の俯瞰時間と区分別配分を頭の中で復唱する</li></ul><h3>コンディション最優先</h3><p>直前の追い込みより睡眠と落ち着きを優先する。本番の集中力が最大の武器となる。</p>
<h2>残り時間ごとの行動</h2><table><thead><tr><th scope="col">残り時間</th><th scope="col">行動</th></tr></thead><tbody><tr><td>開始〜5分</td><td>全案件を眺めA/B/C仮ラベル付与</td></tr><tr><td>5分〜終盤</td><td>A→B→Cの順に処理</td></tr><tr><td>残り10分</td><td>白紙案件チェック、最低1行で結論を埋める</td></tr><tr><td>残り3分</td><td>誤字脱字より抜け漏れの最終確認を優先</td></tr></tbody></table><p>本番では想定外（難しい案件・時間配分のズレ）が起きやすい。事前に決めた残り時間ごとの行動表を心の中で持っておくと、慱てずに切り替えられる。</p>
<h2>参照導線</h2><ul><li><a href="/reference/chapter04">時間配分とタイムマネジメント</a>：残り時間ごとの判断基盤を確認する</li><li><a href="/patterns/9">プロジェクト遅延・品質問題（パターン9）</a>：想定外が起きやすいパターンで残り時間ごとの行動表を当てはめる</li></ul>
        <ul><li><a href="/reference/chapter11">← 前の章 弱点分析と継続改善</a></li><li><a href="/reference">↑ 章一覧へ戻る</a></li><li>次の章 → （最後の章です）</li></ul>
        <nav id="reference-chapter-nav" aria-label="章スキップ"><ul><li><a href="/reference/chapter01">第1章 インバスケットとは何か</a></li><li><a href="/reference/chapter02">第2章 採点基準と振り返りの6観点</a></li><li><a href="/reference/chapter03">第3章 マネージャー思考への切替</a></li><li><a href="/reference/chapter04">第4章 時間配分とタイムマネジメント</a></li><li><a href="/reference/chapter05">第5章 優先順位づけの技術</a></li><li><a href="/reference/chapter06">第6章 意思決定フレームワーク</a></li><li><a href="/reference/chapter07">第7章 委任と組織活用の技術</a></li><li><a href="/reference/chapter08">第8章 案件パターン別攻略</a></li><li><a href="/reference/chapter09">第9章 答案の書き方と文章技術</a></li><li><a href="/reference/chapter10">第10章 模擬試験の進め方</a></li><li><a href="/reference/chapter11">第11章 弱点分析と継続改善</a></li><li><a href="/reference/chapter12">第12章 本番当日の戦略</a></li></ul></nav>
      </div></div>
    <script type="module" src="/assets/index.js"></script>
  </body>
</html>"
`;
